# IPP

./: CMakeLists.txt  Dockerfile  README.md
include/: core.h
src/: core.cpp  main.cpp
